# cloud_compute_utils

./: .gitignore  CHANGELOG.md  README.md  demo_remote_code_execution.py  pyproject.toml
cloud_compute_utils/: CHANGELOG.md  aws_util.py  cloud_cli.py  demo_remote_code_execution.py  deploy_cli.py  readme_deployments.md  run_code.py  run_remote_code.py  ssh_demo.py
cloud_compute_utils/scripts/: install.sh  install_cmd.sh  run.sh
